fix: File name reference

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ https://github.com/jfabi/mbta-shuttle-tracker
     <div id="map"></div>
     
     <script src="config.js"></script>
-    <script src="shuttleMap.js.js"></script> 
+    <script src="shuttleMap.js"></script>
 </body>
 </html>
